# libsodium-cmake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: aead_aegis128l.c.609A8D4EFC20A12F.idx  aead_aegis128l.c.80C8FB9BAF0727A9.idx  aead_aegis256.c.21C5BF5F95BE655B.idx  aead_aegis256.c.D077BE5125C96524.idx  aead_aes256gcm.c.0797A065FA1C64FE.idx  aead_aes256gcm.c.5157B079A1DC5AEF.idx  aead_aes256gcm2.c.1ACB3702C5A85997.idx  aead_aes256gcm_aesni.c.9EE15A2DD1BCCEB3.idx  aead_aes256gcm_armcrypto.c.969BE87245C4F51D.idx  aead_chacha20poly1305.c.624C98FE2D9AF182.idx  aead_chacha20poly1305.c.F502380FC3261EC2.idx  aead_chacha20poly13052.c.7DBF27A40A8BA138.idx  aead_xchacha20poly1305.c.76BF403F7CA8C57E.idx  aead_xchacha20poly1305.c.DF9D1A695911D583.idx  aegis128l_aesni.c.6C360CECF7ACE151.idx  aegis128l_armcrypto.c.08D61E90268E0FA8.idx  aegis128l_common.h.3E4A11B714113B6A.idx  aegis128l_soft.c.470261885774CAED.idx  aegis128l_soft.h.5C30963379D19274.idx  aegis256_aesni.c.E3C965AF8FC78095.idx  aegis256_armcrypto.c.44FFA0762DBA5D22.idx  aegis256_common.h.D66EE3E42D220989.idx  aegis256_soft.c.CC377B7AAEBF9680.idx  aegis256_soft.h.2E9AB9C301F4BB19.idx  argon2-core.c.0B9044B46612959C.idx  argon2-core.h.A2889510E706EF60.idx  argon2-encoding.c.031144ACDB5CB585.idx  argon2-encoding.h.AF13253BFAC7B355.idx  argon2-fill-block-avx2.c.032007D6D912155F.idx  argon2-fill-block-avx512f.c.07D5E7C03B33A156.idx  argon2-fill-block-ref.c.A4351A6D99AC9D21.idx  argon2-fill-block-ssse3.c.7BF0B256B85EA00A.idx  argon2.c.3C0E7F2CC3179D35.idx  (+276 more)
.github/workflows/: ci.yaml
